--- a/Index.html
+++ b/Index.html
@@ -54,6 +54,20 @@
           <img class="t1" src="images/Rectangle 5.svg">
           <img class="t2" src="images/Rectangle 6.svg">
           <img class="t3" src="images/Rectangle 7.svg">
+
+            <p class="m1">CRUISE TOUR</p>
+            <p class="m2">FIRE CAMP</p>
+            <p class="m3">CORPORATE HOLYDAYS</p>
+
+               <p class="w1">We hope you can visit and enjoy it
+                ths beautiful places with your 
+                friend and favorite people</p>
+               <p class="w2">We hope you can visit and enjoy it
+                ths beautiful places with your 
+                friend and favorite people</p>
+               <p class="w3">We hope you can visit and enjoy it
+                ths beautiful places with your 
+                friend and favorite people</p>
           
     </section>
 </body>
